[package]
name = "ta-policy"
version = "0.3.5-alpha"
edition = "2021"
description = "Capability manifests and policy evaluation for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
