[package]
name = "ta-runtime"
version.workspace = true
edition = "2021"
description = "Runtime Adapter Trait for Trusted Autonomy agent process management"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "runtime", "process"]
categories = ["development-tools"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

ta-credentials = { path = "../ta-credentials", version = "0.15.24-alpha.2" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
