[package]
name = "ta-sandbox"
version.workspace = true
edition = "2021"
description = "Allowlisted command execution sandbox for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
