[package]
name = "ta-sandbox"
version.workspace = true
edition = "2021"
description = "Allowlisted command execution sandbox for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "sandbox", "security"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
ta-policy = { path = "../ta-policy", version = "0.15.30-alpha.2" }

[dev-dependencies]
tempfile = { workspace = true }
