[package]
name = "ta-submit"
version.workspace = true
edition = "2021"
description = "Submit adapters for VCS integration in Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "vcs", "review"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ta-changeset = { path = "../ta-changeset", version = "0.15.26-alpha" }
ta-goal = { path = "../ta-goal", version = "0.15.26-alpha" }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
