[package]
name = "ta-workflow"
version.workspace = true
edition = "2021"
description = "Pluggable workflow engine for multi-stage, multi-role orchestration in Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "workflow", "orchestration"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
ta-changeset = { path = "../ta-changeset", version = "0.15.30-alpha.2.4" }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
