[package]
name = "ta-workspace"
version.workspace = true
edition = "2021"
description = "Staging workspace manager and change store for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "workspace", "staging"]
categories = ["development-tools", "filesystem"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
ta-changeset = { path = "../ta-changeset", version = "0.15.30-alpha.2.2" }
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_ProjectedFileSystem",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
