[workspace]

[package]
name = "ta-channel-discord"
version = "0.1.0"
edition = "2021"
description = "Discord channel plugin for Trusted Autonomy — external JSON-over-stdio plugin"
license = "Apache-2.0"

[[bin]]
name = "ta-channel-discord"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "signal", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
