[workspace]

[package]
name = "ta-channel-slack"
version = "0.1.0"
edition = "2021"
description = "Slack channel plugin for Trusted Autonomy — external JSON-over-stdio plugin"
license = "Apache-2.0"

[[bin]]
name = "ta-channel-slack"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
